--- a/app/views/message/index.html.erb
+++ b/app/views/message/index.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
 
   <div class="col">
-    <div class="chat">
+    <div class="chat" data-channel-subscribe="chat">
       <% @messages.each do |message| %>
-       <div class="chat-message-container">
-            <div class="row no-gutters">
+        <div class="chat-message-container">
+          <div class="row no-gutters">
             <div class="col-auto text-center">
-              <img src="<%= gravatar_url(message.user) %>" class="avatar" alt="">
+              <img src="<%= message.user.gravatar_url %>" class="avatar" alt="">
             </div>
 
             <div class="col">
