--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -21,3 +21,25 @@
     margin-top: 10px;
   }
 }
+
+.chat {
+  border: 1px solid lighten(grey, 40%);
+  background: lighten(grey, 50%);
+  height: 50vh;
+  border-radius: 5px 5px 0 0;
+  overflow-y: auto;
+}
+
+.chat-input {
+  border-top: 0 none;
+  border-radius: 0 0 5px 5px;
+}
+
+.room-nav-link {
+  border: 1px solid lighten(rgb(121, 204, 236), 40%);
+  background: lighten(rgb(53, 116, 141), 45%);
+
+  & + .room-nav-link {
+    border-top: 0 none;
+  }
+}
