--- a/app/views/rooms/_rooms.html.erb
+++ b/app/views/rooms/_rooms.html.erb
@@ -12,7 +12,10 @@
         
         <% if room.owner_id == current_user.id %>
           <%= link_to edit_room_path(room), class: 'btn btn-primary' do %>
-            Update a room
+            Update
+          <% end %>
+          <%= link_to room_path(room), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' do %>
+            Delete
           <% end %>
         <% end %>
       </div>
