Connect action cable with rooms.

--- a/app/views/message/index.html.erb
+++ b/app/views/message/index.html.erb
@@ -33,7 +33,7 @@
                                  wrapper: false,
                                  label: false,
                                  input_html: {
-                                   class: 'chat-input'
+                                   class: 'chat-input', id: 'new_message'
                                  } %>
         <div class="input-group-append">
           <%= form.submit "Send", class: 'btn btn-primary chat-input' %>
