--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="col">
-    <div class="chat" data-channel-subscribe='chat'>
+    <div id="room_messages" class="chat" data-channel-subscribe='chat' data-room-id="<%= @room.id %>">
       <% @room_messages.each do |room_message| %>
         <div class="chat-message-container">
           <div class="row no-gutters">
