--- a/app/views/rooms/_rooms.html.erb
+++ b/app/views/rooms/_rooms.html.erb
@@ -6,20 +6,24 @@
 
 <% if @rooms.present? %>
   <nav class="nav flex-row">
-    <% @rooms.each do |room| %>
-      <div class="d-flex justify-content-start mb-2">
-        <%= link_to room.name, room_path(room), class: 'nav-link room-nav-link' %>
-        
-        <% if room.owner_id == current_user.id %>
-          <%= link_to edit_room_path(room), class: 'btn btn-primary' do %>
-            Update
+    <div class="chat" data-channel-subscribe='user' data-user-id="<%= current_user.id %>">
+      <% @rooms.each do |room| %>
+        <div class="d-flex justify-content-start mb-2">
+          <%= link_to room.name, room_path(room), class: 'nav-link room-nav-link', id: "room_name" %>
+          <% if @unreaded_messages > 0 %>
+            <span id="p11"><%= @unreaded_messages %></span>
           <% end %>
-          <%= link_to room_path(room), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' do %>
-            Delete
+          <% if room.owner_id == current_user.id %>
+            <%= link_to edit_room_path(room), class: 'btn btn-primary' do %>
+              Update
+            <% end %>
+            <%= link_to room_path(room), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' do %>
+              Delete
+            <% end %>
           <% end %>
-        <% end %>
-      </div>
-    <% end %>
+        </div>
+      <% end %>
+    </div>
   </nav>
 <% else %>
   <div class="text-muted">
