--- a/app/views/rooms/_rooms.html.erb
+++ b/app/views/rooms/_rooms.html.erb
@@ -9,10 +9,8 @@
     <div class="chat" data-channel-subscribe='user' data-user-id="<%= current_user.id %>">
       <% @rooms.each do |room| %>
         <div class="d-flex justify-content-start mb-2">
-          <%= link_to room.name, room_path(room), class: 'nav-link room-nav-link', id: "room_name" %>
-          <% if @unreaded_messages > 0 %>
-            <span id="p11"><%= @unreaded_messages %></span>
-          <% end %>
+          <%= link_to room.name, room_path(room), class: 'nav-link room-nav-link' %>
+          <p id="notification" data-room-id="<%= room.id %>"></p>
           <% if room.owner_id == current_user.id %>
             <%= link_to edit_room_path(room), class: 'btn btn-primary' do %>
               Update
