--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -22,6 +22,23 @@
   }
 }
 
+.hidden {
+  display: none;
+}
+
+// .parent {
+//   position: relative;
+//   display: inline-block;
+// }
+
+// p#notification {
+//   position: absolute;
+//   padding: 2px 7px;
+//   margin-left: 70px;
+//   border-radius: 50%;
+//   background-color: red;
+//   color: white;
+// }
 .chat {
   border: 1px solid lighten(grey, 40%);
   background: lighten(grey, 50%);
