--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -14,7 +14,7 @@
           <div class="row no-gutters">
 
             <div class="col">
-              <div class="message-content">
+              <div class="message-content" id="msg-element">
                 <p class="mb-1">
                   <%= room_message.message %>
                 </p>
