--- a/app/views/rooms/_rooms.html.erb
+++ b/app/views/rooms/_rooms.html.erb
@@ -10,7 +10,7 @@
       <% @rooms.each do |room| %>
         <div class="d-flex justify-content-between mb-2">
           <%= link_to room.name, room_path(room), class: 'nav-link room-nav-link parent'%>
-          <p id="notification" data-room-id="<%= room.id %>"><%= room.message_statuses.where(read: false).where(user_id: current_user.id).count==0 ? ' ' : room.message_statuses.where(read: false).where(user_id: current_user.id).count %></p>
+          <p id="notification" data-room-id="<%= room.id %>"><%= room.unreaded_messages(current_user) == 0 ? ' ' : room.unreaded_messages(current_user) %></p>
           <% if room.owner_id == current_user.id %>
             <%= link_to edit_room_path(room), class: 'btn btn-primary' do %>
               Update
