Load older messages on click

--- a/app/views/rooms/_messages.html.erb
+++ b/app/views/rooms/_messages.html.erb
@@ -1,5 +1,5 @@
 <% @messages.each do |message| %>
-  <div class="chat-message-container" id="ajax-messages">
+  <div class="chat-message-container">
     <div class="row no-gutters">
       <div class="col">
         <div class="message-content" id="msg-element">
@@ -8,9 +8,9 @@
           </p>
 
           <div class="text-right">
-              <small>
-              <%= message["created_at"] %>
-              </small>
+            <small>
+             <%= message["created_at"] %>
+            </small>
           </div>
         </div>
       </div>
