--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  <%= @room.name %>old_messages
+  <%= @room.name %>
 </h1>
 
 <div class="row">
@@ -8,7 +8,7 @@
   </div>
 
   <div class="col">
-    <div class="chat" data-channel-subscribe='chat' data-room-id="<%= @room.id %>">
+    <div class="chat" data-channel-subscribe='chat' id="parent" data-room-id="<%= @room.id %>">
       <div class="d-flex justify-content-center">
         <% if @message_archive %>
           <%= simple_form_for @room, :url => old_messages_path(@room), :method => :get, remote: true do |form| %>
