Fix message routes

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -17,6 +17,11 @@
 .hidden {
   display: none;
 }
+.avatar {
+  max-width: 40px;
+  max-height: 40px;
+  border-radius: 50%;
+}
 
 // .parent {
 //   position: relative;
