--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     
-    <div class="container">
+    <div class="container" data-behavior="vue">
       <div class="row">
         <div class="col-12">
           <%= render partial: 'shared/navigation_bar' %>
