--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -8,34 +8,6 @@
   </div>
 
   <div class="col">
-    <div class="chat msg-box" data-channel-subscribe='chat' data-room-id="<%= @room.id %>">
-      <div class="d-flex justify-content-center">
-        <% if @message_archive %>
-          <%= simple_form_for @room, :url => old_messages_path(@room), :method => :get, remote: true do |form| %>
-            <%= form.submit "Load older messages", id: "old_messages" %>
-            <%= hidden_field_tag :previous_archive, Time.now(), id: "from_date" %>
-          <% end %>
-        <% end %>
-      </div>
-      <div class="room_messages">
-        <%= render partial: 'messages'  %>
-      </div>
-    </div>
-
-    <%= simple_form_for @room_message, :url => room_messages_path(@room), remote: true do |form| %>
-      <div class="input-group mb-3">
-        <%= form.input :message, as: :string,
-                                 wrapper: false,
-                                 label: false,
-                                 input_html: {
-                                   class: 'chat-input message-field'
-                                 } %>
-        <div class="input-group-append">
-          <%= form.submit "Send", class: 'btn btn-primary chat-input submit-message' %>
-        </div>
-        <%= hidden_field_tag :message_id, nil, class: "message_id" %>
-      </div>
-    <% end %>
+    <app :room_id="<%= @room.id %>" :current_user="<%= current_user.id %>"></app>
   </div>
 </div>
-<%= javascript_pack_tag "archives" %>
