--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -7,7 +7,7 @@
     <%= render partial: 'rooms' %>
   </div>
 
-  <div class="col">
+  <div class="col" data-channel-subscribe='chat' data-room-id="<%= @room.id %>">
     <app :room_id="<%= @room.id %>" :current_user="<%= current_user.id %>"></app>
   </div>
 </div>
