Add action cable in vue.

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -9,7 +9,7 @@
 
   <div class="col">
     <div id="chat">
-      <chat-room :room_id="<%= @room.id %>" :current_user="<%= current_user.id %>" id='room'></chat-room>
+      <app :room_id="<%= @room.id %>" :current_user="<%= current_user.id %>" id='room'></app>
     </div>
   </div>
 </div>
