--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,15 +1,3 @@
-<h1>
-  <%= @room.name %>
-</h1>
-
-<div class="row">
-  <div class="col-12 col-md-3">
-    <%= render partial: 'rooms' %>
-  </div>
-
-  <div class="col">
-    <div id="chat">
-      <app :room_id="<%= @room.id %>" :current_user="<%= current_user.id %>" id='room'></app>
-    </div>
-  </div>
+<div id="chat">
+  <app :room_id="<%= @room.id %>" :current-user="<%= current_user.id %>" id='room'></app>
 </div>
